SFOS-12 : Fixed for using "sfCodeBase" in description file for dynamic classloading.